fixed more css overlap between discover and home

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -99,16 +99,6 @@
         font-size: 2rem;
 
     }
-
-    #sunrise {
-        grid-column: 2/3;
-        grid-row: 1/2;
-    }
-
-    #caves {
-        grid-column: 2/3;
-        grid-row: 2/3;
-    }
 }
 
 @media (min-width: 1000px) {
@@ -118,6 +108,34 @@
         max-width: 1200px;
         /* 4 columns on larger screens */
     }
+    .content {
+        grid-column: 1/5;
+    }
+
+    .current-events {
+        grid-column: 1/3;
+        grid-row: 2;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    }
+
+    .spotlight-card {
+        grid-column: 1/5;
+        grid-row: 3;
+        border: none;
+    }
+
+    .spotlight-card>* {
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
+    }
+
+    .information-card {
+        grid-column: 3/5;
+        grid-row: 2;
+        align-self: start;
+        /* Aligns to the top of the box */
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    }
+
 
     .images-of-stgeorge {
         grid-column: 2/5;
